--- a/sudoku.css
+++ b/sudoku.css
@@ -20,3 +20,39 @@ hr {
   display: flex;
   flex-wrap: wrap;
 }
+
+#digits {
+  width: 450px;
+  height: 50px;
+
+  background-color: yellow;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.tile {
+  width: 48px;
+  height: 48px;
+  border: 1px solid lightgray;
+
+  /* text */
+  font-size: 20px;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.number {
+  width: 48px;
+  height: 48px;
+  border: 1px solid black;
+
+  /* text */
+  font-size: 20px;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
