--- a/sudoku.css
+++ b/sudoku.css
@@ -45,9 +45,10 @@ hr {
 }
 
 .number {
-  width: 48px;
-  height: 48px;
+  width: 44px;
+  height: 44px;
   border: 1px solid black;
+  margin: 2px;
 
   /* text */
   font-size: 20px;
