--- a/sudoku.css
+++ b/sudoku.css
@@ -15,7 +15,6 @@ hr {
   width: 450px;
   height: 450px;
 
-  background-color: yellow;
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
@@ -56,4 +55,8 @@ hr {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.number-selected {
+  background-color: gray;
 }
