--- a/sudoku.css
+++ b/sudoku.css
@@ -63,3 +63,11 @@ hr {
 .tile-start {
   background-color: whitesmoke;
 }
+
+.horizontal-line {
+  border-bottom: 1px soild black;
+}
+
+.vertical-line {
+  border-right: 1px solid black;
+}
